# cs-learning

./: README.md
ansible-up-and-running/: README.md
ansible-up-and-running/ch01/playbooks/: Vagrantfile  inventory.yaml
ansible-up-and-running/ch02/playbooks/: Vagrantfile
apple/ASLCocoaOC/ASLCocoaOC/: AppDelegate.h  AppDelegate.m  CustomView.h  CustomView.m  MainWindowController.h  MainWindowController.m  MainWindowController.xib  main.m
apple/ASLCocoaOC/ASLCocoaOC.xcodeproj/: project.pbxproj
apple/ASLDemo/ASLDemo/: main.c
apple/ASLDemo/ASLDemo.xcodeproj/: project.pbxproj
apps/pbjs/: Vagrantfile  package.json  pnpm-lock.yaml
apps/pbjs/scripts/: gen-pb.js
apps/pbjs/src/: main.ts
apps/pbjs/src/pb/: bundle.d.ts  (+3 more)
cocoa-projs/RGBWell/RGBWell/: AppDelegate.swift  MainWindowController.swift  MainWindowController.xib
cocoa-projs/RGBWell/RGBWell.xcodeproj/: project.pbxproj
cocoa-projs/RandomPassword/RandomPassword.xcodeproj/: project.pbxproj
modern-compiler-implementation-in-c/: Vagrantfile  bootstrap.sh
modern-compiler-implementation-in-c/ch1/: tree.c
modern-compiler-implementation-in-c/flex-examples/: run.sh  wc1  wc1.c
network-proxy/: README.md  Vagrantfile  nginx-setup.sh
network-proxy/client/: Vagrantfile  bootstrap.sh
network-proxy/etc/: nginx-forward-proxy.conf  ssserver.json
network-proxy/modules/: download.md
network-proxy/server/: bootstrap.sh
the-art-of-debugging-with-gdb-ddd-and-eclipse/: README.md
tools-tutorial/automake/: Vagrantfile  bootstrap.sh  configure.ac  readme.md
tools-tutorial/automake/src/: helloworld.c
(+28 files in other folders)
